typescript/checker/tests/conformance/types/typeRelationships/typeAndMemberIdentity/unionTypeIdentity.ts.stderr
error: RedclaredVarWithDifferentType {
    span: Span {
        lo: BytePos(
            227,
        ),
        hi: BytePos(
            235,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/types/typeRelationships/typeAndMemberIdentity/unionTypeIdentity.ts:6:5
  |
6 | var strOrNum: string; // error
  |     ^^^^^^^^

error: RedclaredVarWithDifferentType {
    span: Span {
        lo: BytePos(
            259,
        ),
        hi: BytePos(
            267,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/types/typeRelationships/typeAndMemberIdentity/unionTypeIdentity.ts:7:5
  |
7 | var strOrNum: boolean; // error
  |     ^^^^^^^^

error: RedclaredVarWithDifferentType {
    span: Span {
        lo: BytePos(
            292,
        ),
        hi: BytePos(
            300,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/types/typeRelationships/typeAndMemberIdentity/unionTypeIdentity.ts:8:5
  |
8 | var strOrNum: number; // error
  |     ^^^^^^^^

